--- a/src/myapp/app.yaml
+++ b/src/myapp/app.yaml
@@ -4,6 +4,11 @@ runtime: go
 api_version: 2
 
 handlers:
+- url: /images
+  static_dir: images
 - url: /.*
   script: _go_app
+- url: /favicon.ico
+  static_files: /favicon.ico
+  upload: /favicon.ico
 
